[package]
name = "bench-utils"
version = "0.1.0"
authors = [ "arkworks contributors" ]
description = "A helper library for profiling performance in arkworks"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/utils"
documentation = "https://docs.rs/bench-utils/"
keywords = ["profiling"]
categories = ["development-tools::profiling"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
colored = { version = "1", optional = true }

[features]
# also enables the standard library.
print-trace = [ "colored" ]
